# Software_Test_Lab

./: 软测lab1.docx
找零/: CMakeLists.txt  README.md  RemainMoney.hpp  RemainMoneyRAII.hpp  State.hpp  State_1.cpp  State_1.hpp  State_10.cpp  State_10.hpp  State_2.cpp  State_2.hpp  State_20.cpp  State_20.hpp  State_5.cpp  State_5.hpp  State_50.cpp  State_50.hpp  main.cpp
